Add a Pictures page to show a list of available pictures linking to the page of real size picture. Add a page to show picture on real size. Picture on the carousel links to that page. Made app more scalable: picture information are set in a JSON file loaded in the App. Various style changes. Start of a 'dot' componenent to set under the carousel, each dot represent a picture, the full dot show the current position in the carousel

--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -1,53 +1,56 @@
 .carousel {
   height: $carousel-height;
 
+  margin-top: $margin-top-carousel;
   display: flex;
   justify-content: center;
+
   button {
     width: 30%;
-    background: none;
-    opacity: 0%;
     border: none;
     position: absolute;
     height: inherit;
-    transition: opacity 2s ease;
+    transition: opacity 0.5s ease;
 
     &.prev {
-      top: $navbar-heigth;
+      top: $navbar-heigth + $margin-top-carousel;
       left: 0px;
+      background: linear-gradient(
+        to left,
+        rgba(253, 253, 253, 0) 50%,
+        rgb(136, 136, 136) 100%
+      );
+      opacity: 0%;
 
       &:hover {
         opacity: 100%;
-        background: linear-gradient(
-          to left,
-          rgba(253, 253, 253, 0) 50%,
-          rgb(136, 136, 136) 100%
-        );
       }
     }
 
     &.next {
-      top: $navbar-heigth;
+      top: $navbar-heigth + $margin-top-carousel;
       right: 0px;
+      background: linear-gradient(
+        to right,
+        rgba(253, 253, 253, 0) 50%,
+        rgb(136, 136, 136) 100%
+      );
+      opacity: 0%;
 
       &:hover {
         opacity: 100%;
-        background: linear-gradient(to right, #ffffff00 0%, #0000007a 100%);
       }
     }
   }
 
-  #main-img-carousel {
-    display: block;
-  }
-  .image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  img {
+    max-height: $carousel-height;
+    border-radius: 3px;
   }
 
-  img {
-    max-height: 100%;
+  .dot {
+    position: absolute;
+    top: $carousel-height + $margin-top-carousel + $height-dot-carousel +
+      $navbar-heigth;
   }
 }
