--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,10 @@
-$navbar-color: rgb(203, 203, 223);
-$navbar-heigth: 55px;
+$background-color-app: black;
+$color-font-app: white;
+
+$navbar-background-color: rgb(230, 227, 201);
+$navbar-font-color: rgb(78, 78, 85);
+$navbar-heigth: 30px;
 
 $carousel-height: 800px;
+$margin-top-carousel: 20px;
+$height-dot-carousel: 30px;
