--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -134,57 +134,70 @@ select {
 }
 
 .App {
-  margin-top: 55px;
+  padding-top: 30px;
+  background-color: black;
+  min-height: 100vh;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 nav {
   position: fixed;
   width: 100%;
-  height: 55px;
+  height: 30px;
   top: 0;
   left: 0;
-  background-color: #cbcbdf;
+  padding-left: 50px;
+  background-color: #e6e3c9;
+  color: #4e4e55;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+}
+nav a {
+  padding: 10px 20px;
 }
 
 .carousel {
   height: 800px;
+  margin-top: 20px;
   display: flex;
   justify-content: center;
 }
 .carousel button {
   width: 30%;
-  background: none;
-  opacity: 0%;
   border: none;
   position: absolute;
   height: inherit;
-  transition: opacity 2s ease;
+  transition: opacity 0.5s ease;
 }
 .carousel button.prev {
-  top: 55px;
+  top: 50px;
   left: 0px;
+  background: linear-gradient(to left, rgba(253, 253, 253, 0) 50%, #888888 100%);
+  opacity: 0%;
 }
 .carousel button.prev:hover {
   opacity: 100%;
-  background: linear-gradient(to left, rgba(253, 253, 253, 0) 50%, #888888 100%);
 }
 .carousel button.next {
-  top: 55px;
+  top: 50px;
   right: 0px;
+  background: linear-gradient(to right, rgba(253, 253, 253, 0) 50%, #888888 100%);
+  opacity: 0%;
 }
 .carousel button.next:hover {
   opacity: 100%;
-  background: linear-gradient(to right, #ffffff00 0%, #0000007a 100%);
-}
-.carousel #main-img-carousel {
-  display: block;
-}
-.carousel .image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
 }
 .carousel img {
-  max-height: 100%;
+  max-height: 800px;
+  border-radius: 3px;
+}
+.carousel .dot {
+  position: absolute;
+  top: 880px;
 }/*# sourceMappingURL=index.css.map */
