add dot under carousel to show position in the carousel

--- a/src/styles/_carousel.scss
+++ b/src/styles/_carousel.scss
@@ -52,5 +52,9 @@
     position: absolute;
     top: $carousel-height + $margin-top-carousel + $height-dot-carousel +
       $navbar-heigth;
+
+    img {
+      filter: invert(1);
+    }
   }
 }
