--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -203,4 +203,17 @@ nav a {
 }
 .carousel .dot img {
   filter: invert(1);
+}
+
+.pictures {
+  margin: 40px;
+}
+.pictures ul {
+  list-style: none;
+}
+.pictures ul li {
+  margin-top: 3px;
+}
+.pictures ul li:hover {
+  color: #94dee0;
 }/*# sourceMappingURL=index.css.map */
