--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$background-color-app: black;
+$background-color-app: rgb(43, 43, 43);
 $color-font-app: white;
 
 $navbar-background-color: rgb(230, 227, 201);
@@ -8,3 +8,5 @@ $navbar-heigth: 30px;
 $carousel-height: 800px;
 $margin-top-carousel: 20px;
 $height-dot-carousel: 30px;
+
+$pictures-del-button-color: rgb(78, 78, 85);
